# OSi

./: .gitignore
lab1/: CMakeCache.txt  CMakeLists.txt  CMakePresets.json  Makefile  cmake_install.cmake  data.base  posix_ipc-example-client  posix_ipc-example-client.c  posix_ipc-example-server  posix_ipc-example-server.c  server.c
lab2/: 211_Тропин_Лаб2.odt  CMakeLists.txt  CMakePresets.json  graph.ipynb  main.cpp  main_mutex.cpp  res.csv  res2.csv  res_mutex.csv
lab3/: 211_Тропин_Лаб1.odt  211_Тропин_Лаб3.odt  CMakeLists.txt  Makefile  client  client.c  data.base  pool.h  server  server.c
lab4/: 211_Тропин_Лаб3.odt  211_Тропин_Лаб4.odt  Makefile  blocks2n.c  blocks2n.h  buddys.c  main  main.c  main.h
